--- a/Timetable.Web/ClientApp/package.json
+++ b/Timetable.Web/ClientApp/package.json
@@ -1,57 +1,70 @@
 {
-  "name": "timetable.web",
+  "name": "timetable",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "~4.6.1",
-    "jquery": "~3.6.0",
-    "connected-react-router": "6.5.2",
-    "history": "4.10.1",
-    "merge": "2.1.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.4",
+    "@syncfusion/ej2-base": "^21.1.40",
+    "@syncfusion/ej2-react-dropdowns": "^21.1.41",
+    "@syncfusion/ej2-react-grids": "^21.1.41",
+    "@syncfusion/ej2-react-inputs": "^21.1.39",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router": "^5.1.20",
+    "bootstrap": "^5.2.3",
+    "framer-motion": "^10.12.2",
+    "history": "^5.3.0",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "jQuery": "^1.7.4",
+    "merge": "^2.1.1",
     "popper.js": "^1.16.1",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0",
-    "react-redux": "~7.2.6",
-    "react-router": "~5.2.1",
-    "react-router-dom": "~5.3.0",
-    "reactstrap": "~8.10.1",
-    "redux": "4.1.2",
-    "redux-thunk": "2.4.1"
-  },
-  "devDependencies": {
-    "@types/history": "4.7.10",
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.6",
-    "@types/react": "~16.9.14",
-    "@types/react-dom": "~16.9.14",
-    "@types/react-redux": "~7.1.22",
-    "@types/react-router": "~5.1.17",
-    "@types/react-router-dom": "~5.3.0",
-    "@types/reactstrap": "~8.7.2",
-    "cross-env": "6.0.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "nan": "^2.15.0",
-    "react-scripts": "^5.0.0",
-    "typescript": "3.6.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.9",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/*.ts ./src/**/*.tsx"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "resolutions": {
-    "url-parse": ">=1.5.0",
-    "lodash": ">=4.17.21"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
+  }
 }
